cmake_minimum_required(VERSION 3.22)
project(Skite VERSION 0.1.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_C_VISIBILITY_PRESET hidden)
set(CMAKE_CXX_VISIBILITY_PRESET hidden)

set(SKITE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
set(SKITE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
set(SKITE_VERSION_PATCH ${PROJECT_VERSION_PATCH})
set(SKITE_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/include)

add_subdirectory(src)
